# omegabox

./: .env.sample  Cargo.toml  Justfile  README.md  build.rs
src/: cmds.rs  common.rs  main.rs
src/cmds/: hello.rs  led.rs  relay.rs
src/cmds/relay/: driver.rs
