[package]
name = "omegabox"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
phf = "0.8"

[build_dependencies]
phf_codegen = "0.8"

[profile.release]
codegen-units = 1
opt-level="z"
lto="fat"
panic="abort"
