[package]
name = "omegabox"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-eyre = { git = "https://github.com/cr1901/simple-eyre", branch="must-install-tmp", version = "0.3.0" }
phf = "0.8"
pico-args = "0.4.0"
gpio-cdev = "0.3"
embedded-hal = "0.2.3"
linux-embedded-hal = { git = "https://github.com/rust-embedded/linux-embedded-hal", branch = "v0.3.x", version = "0.3", features = ["gpio_cdev"] }

[build_dependencies]
phf_codegen = "0.8"

[profile.release]
codegen-units = 1
opt-level="z"
lto="fat"
panic="abort"
